src/test/ui/feature-gates/feature-gate-rustc_main.rs
#![rustc_main(foo)] //~ ERROR: the `#[rustc_main]` attribute is an experimental feature
fn foo() {}
